all major changes exception handling, swagger